--- a/gmaFFFFF.CadastrBenin.ViewModel/gmaFFFFF.CadastrBenin.ViewModel.csproj
+++ b/gmaFFFFF.CadastrBenin.ViewModel/gmaFFFFF.CadastrBenin.ViewModel.csproj
@@ -99,10 +99,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Message\CleanUpMessage.cs" />
+    <Compile Include="Message\ReferenceRefreshedMessage.cs" />
     <Compile Include="Model\DBContextFactory.cs" />
     <Compile Include="Model\ProxyReferences.cs" />
+    <Compile Include="Services\Comparers.cs" />
     <Compile Include="ViewModel\MapViewModel.cs" />
     <Compile Include="Model\ParcelModel.cs" />
+    <Compile Include="ViewModel\MyViewModelBase.cs" />
     <Compile Include="ViewModel\ParcelEditViewModel.cs" />
     <Compile Include="ViewModel\ReferenceViewModel.cs" />
     <Compile Include="ViewModelLocator.cs" />
@@ -124,9 +128,7 @@
   <ItemGroup>
     <WCFMetadata Include="Service References\" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Service\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Fody.2.0.0\build\dotnet\Fody.targets" Condition="Exists('..\packages\Fody.2.0.0\build\dotnet\Fody.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
