Начата работа над редактором геометрии

--- a/gmaFFFFF.CadastrBenin.DesktopApp/gmaFFFFF.CadastrBenin.DesktopApp.csproj
+++ b/gmaFFFFF.CadastrBenin.DesktopApp/gmaFFFFF.CadastrBenin.DesktopApp.csproj
@@ -114,8 +114,15 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="EditParcelGeometryWindow.xaml.cs">
+      <DependentUpon>EditParcelGeometryWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Services\Converters.cs" />
     <Compile Include="Services\UIHelper.cs" />
+    <Page Include="EditParcelGeometryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
